# local-agent-society

./: .gitignore  CLAUDE.md  PLUGIN.md  README.md  install.sh  pyproject.toml  start.sh  stop.sh  uninstall.sh  update.sh
.claude/skills/las-agent/: SKILL.md
backend/: main.py  serve.sh  start.sh  stop.sh
cli/: api.py  main.py  path_utils.py
cli/commands/: __init__.py  agents.py  boarding.py  completion.py  ports.py  queue.py  speak.py  system.py  voices.py
docs/: boarding.html
hooks/: announce-here.sh
scripts/: migrate-agent-json.py
sdk/: society.ts
session/: haiku-watcher.sh  opus-watcher.sh
skills/local-agent-pronunciation/: SKILL.md
skills/local-agent-voice/: SKILL.md
skills/local-agent-widget/: SKILL.md
skills/new-local-agent/: SKILL.md
skills/port-audit/: skill.md
tests/: conftest.py  test_agent_consistency.py  test_command_palette.py  test_find_nearest_agent.py  test_focus.py  test_inject.py  test_link.py  test_widget_build.py  test_widget_reopen.py
widget/: run_tests.sh  tests_logic.swift  tray.swift  widget.swift
