[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent-society"
version = "1.0.0"
description = "CLI for the Local Agent Society"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
las = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
